fixing videos not playing properly on mobile

--- a/client/src/Components/About/styles.css
+++ b/client/src/Components/About/styles.css
@@ -102,4 +102,6 @@
 	height: 100%;
 	width: 100%;
 	z-index: -1;
+	user-select: none;
+	pointer-events: none;
 }
