--- a/client/src/Components/HomeHero/styles.css
+++ b/client/src/Components/HomeHero/styles.css
@@ -53,6 +53,8 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	user-select: none;
+	pointer-events: none;
 }
 
 @media screen and (max-width: 768px) {
